objects/Engineering_Projects__c.object
<CustomObject>
    <description>This is R&amp;D and PM place where projects can be set-up (NPD or AE)
Those project can be then linked to Sales Opportunities projects</description>
    <fields>
        <fullName>Application_product_Usage__c</fullName>
        <description>PM needs to detail the usage of the product, and define the countries targeted</description>
        <inlineHelpText>PM needs to detail the usage of the product, and define the countries targeted</inlineHelpText>
        <label>Application / Product Usage</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BCI_Cordell_Project_ID__c</fullName>
        <label>BCI/Cordell Project ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Distributor and Direct</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commence_Date__c</fullName>
        <label>Commence Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Commercial_launchin__c</fullName>
        <label>Commercial launching date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Engineering Projects</relationshipLabel>
        <relationshipName>Engineering_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AUSTRALIA</fullName>
                </value>
                <value>
                    <fullName>NEW ZEALAND</fullName>
                </value>
                <value>
                    <fullName>PNG (Papua New Guinea)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Issues_Status__c</fullName>
        <label>Current Issues &amp; Status</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Energy_Record_Id__c</fullName>
        <label>Energy Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Value_to_TE__c</fullName>
        <description>ANS - Estimated Value to TE</description>
        <label>Estimated Value to TE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FY13_Q1__c</fullName>
        <label>FY13 Q1</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FY13_Q2__c</fullName>
        <label>FY13 Q2</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FY13_Q3__c</fullName>
        <label>FY13 Q3</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FY13_Total__c</fullName>
        <formula>FY13_Q1__c  +  FY13_Q2__c  +  FY13_Q3__c  +  FY13_Q4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FY13 Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FY13__c</fullName>
        <label>FY13</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FY14_Total__c</fullName>
        <formula>FY14_Q1__c + FY14_Q2__c + FY14_Q3__c + FY14_Q4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FY14 Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FY14__c</fullName>
        <label>FY14</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FY15__c</fullName>
        <label>FY15</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FY16_Total__c</fullName>
        <formula>FY16_Q1__c + FY16_Q2__c + FY16_Q3__c + FY16_Q4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FY16 Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gx_Date__c</fullName>
        <label>Gx Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gx_level__c</fullName>
        <label>Gx level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-G0 (Market research)</fullName>
                </value>
                <value>
                    <fullName>G0</fullName>
                </value>
                <value>
                    <fullName>G1</fullName>
                </value>
                <value>
                    <fullName>G2</fullName>
                </value>
                <value>
                    <fullName>G3</fullName>
                </value>
                <value>
                    <fullName>G4</fullName>
                </value>
                <value>
                    <fullName>G5</fullName>
                </value>
                <value>
                    <fullName>Launched</fullName>
                </value>
                <value>
                    <fullName>G6 after 3 months</fullName>
                </value>
                <value>
                    <fullName>G6 after 6 months</fullName>
                </value>
                <value>
                    <fullName>G6 after 12 months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IMM__c</fullName>
        <label>IMM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bruno Tiziani</fullName>
                </value>
                <value>
                    <fullName>David Bryant</fullName>
                </value>
                <value>
                    <fullName>Jason Woodcock</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key_Market_or_customer__c</fullName>
        <label>Key Countries and customer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <label>Market Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hydro</fullName>
                </value>
                <value>
                    <fullName>LNG</fullName>
                </value>
                <value>
                    <fullName>Mining</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>Rail</fullName>
                </value>
                <value>
                    <fullName>Solar</fullName>
                </value>
                <value>
                    <fullName>Utility</fullName>
                </value>
                <value>
                    <fullName>Wind</fullName>
                </value>
                <value>
                    <fullName>Generation</fullName>
                </value>
                <value>
                    <fullName>Transmission</fullName>
                </value>
                <value>
                    <fullName>Distribution</fullName>
                </value>
                <value>
                    <fullName>Substation</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Industrial - Mining</fullName>
                </value>
                <value>
                    <fullName>Smart Grid</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_Step__c</fullName>
        <label>Next Step</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OPEX_CAPEX_SPEND__c</fullName>
        <label>OPEX + CAPEX SPEND</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <inlineHelpText>Please select if this is defensive biz or incremental biz.</inlineHelpText>
        <label>Opportunity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Defensive</fullName>
                </value>
                <value>
                    <fullName>Incremental</fullName>
                </value>
                <value>
                    <fullName>Growth</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PRJ_Number__c</fullName>
        <description>Project number</description>
        <inlineHelpText>Project number</inlineHelpText>
        <label>PRJ Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Choose a priority</fullName>
                </value>
                <value>
                    <fullName>A1 - High</fullName>
                </value>
                <value>
                    <fullName>B1 - Medium</fullName>
                </value>
                <value>
                    <fullName>C1 - Low</fullName>
                </value>
                <value>
                    <fullName>A2 - High</fullName>
                </value>
                <value>
                    <fullName>B2 - Medium</fullName>
                </value>
                <value>
                    <fullName>C2 - Low</fullName>
                </value>
                <value>
                    <fullName>A3 - High</fullName>
                </value>
                <value>
                    <fullName>B3 - Medium</fullName>
                </value>
                <value>
                    <fullName>C3 - Low</fullName>
                </value>
                <value>
                    <fullName>D - No Further Action required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_L_ine__c</fullName>
        <label>Product Line</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AMPACT</fullName>
                </value>
                <value>
                    <fullName>AMP Misc</fullName>
                </value>
                <value>
                    <fullName>Area Lighting Research</fullName>
                </value>
                <value>
                    <fullName>B&amp;H Accessories</fullName>
                </value>
                <value>
                    <fullName>B&amp;H Connectors</fullName>
                </value>
                <value>
                    <fullName>CI Range</fullName>
                </value>
                <value>
                    <fullName>CLP-Installation Service</fullName>
                </value>
                <value>
                    <fullName>Commercial Product Con &amp; Fittings</fullName>
                </value>
                <value>
                    <fullName>Commercial Product HV</fullName>
                </value>
                <value>
                    <fullName>Commercial Product Insulation &amp; Protection</fullName>
                </value>
                <value>
                    <fullName>Commerical Product Cable Accessories</fullName>
                </value>
                <value>
                    <fullName>Commerical Product MSG</fullName>
                </value>
                <value>
                    <fullName>Crompton Analogue</fullName>
                </value>
                <value>
                    <fullName>Crompton Digitial (incl. CI Range)</fullName>
                </value>
                <value>
                    <fullName>Cromtpon Electronic</fullName>
                </value>
                <value>
                    <fullName>CT&apos;s</fullName>
                </value>
                <value>
                    <fullName>Distribution Automation</fullName>
                </value>
                <value>
                    <fullName>Dorman Smith FBA</fullName>
                </value>
                <value>
                    <fullName>Dorman Smith Loose Gear</fullName>
                </value>
                <value>
                    <fullName>Dorman Smith Modis</fullName>
                </value>
                <value>
                    <fullName>Dulmison Business</fullName>
                </value>
                <value>
                    <fullName>Dulmison Insulators</fullName>
                </value>
                <value>
                    <fullName>Guro Cable Accessories</fullName>
                </value>
                <value>
                    <fullName>Guro Insulating Materials</fullName>
                </value>
                <value>
                    <fullName>Guro Street Lighting</fullName>
                </value>
                <value>
                    <fullName>Hellstern</fullName>
                </value>
                <value>
                    <fullName>HV Arrester</fullName>
                </value>
                <value>
                    <fullName>HV Cable Accessories</fullName>
                </value>
                <value>
                    <fullName>HV Comp/Axicom</fullName>
                </value>
                <value>
                    <fullName>HV Connector Systems</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Line_Group__c</fullName>
        <label>Product Line Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cable Accessories</fullName>
                </value>
                <value>
                    <fullName>Connectors &amp; Fittings</fullName>
                </value>
                <value>
                    <fullName>Global High Voltage</fullName>
                </value>
                <value>
                    <fullName>Insulation &amp; Protection</fullName>
                </value>
                <value>
                    <fullName>Metering &amp; Smart  Grid</fullName>
                </value>
                <value>
                    <fullName>Dorman Smith</fullName>
                </value>
                <value>
                    <fullName>Total Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Manager__c</fullName>
        <label>Product Manager</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Adam Annis-Brown</fullName>
                </value>
                <value>
                    <fullName>Alexander Beer</fullName>
                </value>
                <value>
                    <fullName>Alexander Beer/Heike Brandt</fullName>
                </value>
                <value>
                    <fullName>Alexander Eigner</fullName>
                </value>
                <value>
                    <fullName>Alvaro Santiago</fullName>
                </value>
                <value>
                    <fullName>Amanda Dixon</fullName>
                </value>
                <value>
                    <fullName>Andreas Kohhepp</fullName>
                </value>
                <value>
                    <fullName>Andrew Leake</fullName>
                </value>
                <value>
                    <fullName>Bernd Graeve</fullName>
                </value>
                <value>
                    <fullName>Bernhard  pfeiffer</fullName>
                </value>
                <value>
                    <fullName>Bill Burnett</fullName>
                </value>
                <value>
                    <fullName>Bjorn Lachenmann</fullName>
                </value>
                <value>
                    <fullName>Brian Donnelly</fullName>
                </value>
                <value>
                    <fullName>Brian McGowan</fullName>
                </value>
                <value>
                    <fullName>Burghard  Well</fullName>
                </value>
                <value>
                    <fullName>Cedric Glomeau/Richard Gibeault</fullName>
                </value>
                <value>
                    <fullName>Cedric Glommeau</fullName>
                </value>
                <value>
                    <fullName>Chad Eckhardt</fullName>
                </value>
                <value>
                    <fullName>Christoph Lederle</fullName>
                </value>
                <value>
                    <fullName>Christoph Lederle/Nelson Almeida</fullName>
                </value>
                <value>
                    <fullName>Craig Sutton</fullName>
                </value>
                <value>
                    <fullName>Curt Stidham</fullName>
                </value>
                <value>
                    <fullName>Daniel De Vos</fullName>
                </value>
                <value>
                    <fullName>Darren Byford</fullName>
                </value>
                <value>
                    <fullName>Dave Mohan</fullName>
                </value>
                <value>
                    <fullName>Dirk Beckman</fullName>
                </value>
                <value>
                    <fullName>Dittrich Hagen</fullName>
                </value>
                <value>
                    <fullName>Don Barrett</fullName>
                </value>
                <value>
                    <fullName>Fabrice Herve</fullName>
                </value>
                <value>
                    <fullName>Falk Hardt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_description_photo__c</fullName>
        <label>Product description &amp; photo</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Project_Activity__c</fullName>
        <label>Project Activity</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Description__c</fullName>
        <label>Project Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Leader_s__c</fullName>
        <inlineHelpText>Ask SI to add / modify pick list value</inlineHelpText>
        <label>Project Leader (s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Alan Tse</fullName>
                </value>
                <value>
                    <fullName>Alexander Matalygin</fullName>
                </value>
                <value>
                    <fullName>Alexandre Guichard</fullName>
                </value>
                <value>
                    <fullName>Andreas Kohlhepp</fullName>
                </value>
                <value>
                    <fullName>Ankur Gupta</fullName>
                </value>
                <value>
                    <fullName>Barbara Schulz</fullName>
                </value>
                <value>
                    <fullName>Bengt Johnerfelt</fullName>
                </value>
                <value>
                    <fullName>Bernd Komanschek</fullName>
                </value>
                <value>
                    <fullName>Bernhard Pfeiffer</fullName>
                </value>
                <value>
                    <fullName>Brendan Normoyle</fullName>
                </value>
                <value>
                    <fullName>Brian Ayres</fullName>
                </value>
                <value>
                    <fullName>Brian McGowan</fullName>
                </value>
                <value>
                    <fullName>Bruno Peltier</fullName>
                </value>
                <value>
                    <fullName>Carlos Riva</fullName>
                </value>
                <value>
                    <fullName>Cedric Glommeau</fullName>
                </value>
                <value>
                    <fullName>Charlie Fry</fullName>
                </value>
                <value>
                    <fullName>Christian Heindl</fullName>
                </value>
                <value>
                    <fullName>Christian Koziolek</fullName>
                </value>
                <value>
                    <fullName>Curtis Stidham</fullName>
                </value>
                <value>
                    <fullName>Darian Spell</fullName>
                </value>
                <value>
                    <fullName>Dave Pearce</fullName>
                </value>
                <value>
                    <fullName>Dirk Beckmann</fullName>
                </value>
                <value>
                    <fullName>Don Barrett</fullName>
                </value>
                <value>
                    <fullName>Falk Hardt</fullName>
                </value>
                <value>
                    <fullName>Frank Drumm</fullName>
                </value>
                <value>
                    <fullName>Frank Tomczyk</fullName>
                </value>
                <value>
                    <fullName>George Triantopoulos</fullName>
                </value>
                <value>
                    <fullName>Gildas Nedellec</fullName>
                </value>
                <value>
                    <fullName>Gualberto Sanchez</fullName>
                </value>
                <value>
                    <fullName>Ian Bond</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Location__c</fullName>
        <label>Project Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Engineering_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Reference_Number__c</fullName>
        <label>Project Reference Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_State__c</fullName>
        <label>Project State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACT</fullName>
                </value>
                <value>
                    <fullName>NSW</fullName>
                </value>
                <value>
                    <fullName>NT</fullName>
                </value>
                <value>
                    <fullName>QLD</fullName>
                </value>
                <value>
                    <fullName>SA</fullName>
                </value>
                <value>
                    <fullName>TAS</fullName>
                </value>
                <value>
                    <fullName>VIC</fullName>
                </value>
                <value>
                    <fullName>WA</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Timing__c</fullName>
        <label>Project Timing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>P1</fullName>
                </value>
                <value>
                    <fullName>P2</fullName>
                </value>
                <value>
                    <fullName>E1</fullName>
                </value>
                <value>
                    <fullName>E2</fullName>
                </value>
                <value>
                    <fullName>C1</fullName>
                </value>
                <value>
                    <fullName>C2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_status__c</fullName>
        <description>Status of the project.</description>
        <inlineHelpText>Please select one of the options in the field.</inlineHelpText>
        <label>Project status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Launched Product</fullName>
                </value>
                <value>
                    <fullName>Market Research Project</fullName>
                </value>
                <value>
                    <fullName>On Hold Project</fullName>
                </value>
                <value>
                    <fullName>Project cancelled by PAC</fullName>
                </value>
                <value>
                    <fullName>Project Completed</fullName>
                </value>
                <value>
                    <fullName>Concept</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Contract Let</fullName>
                </value>
                <value>
                    <fullName>Contract Under Negotiation</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Development Application</fullName>
                </value>
                <value>
                    <fullName>Development Approval</fullName>
                </value>
                <value>
                    <fullName>Documentation</fullName>
                </value>
                <value>
                    <fullName>Early Planning</fullName>
                </value>
                <value>
                    <fullName>Feasibility Study</fullName>
                </value>
                <value>
                    <fullName>Firm</fullName>
                </value>
                <value>
                    <fullName>Sketch Plans</fullName>
                </value>
                <value>
                    <fullName>Tenders Called</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Q1_FY12__c</fullName>
        <label>Q1 FY12$</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sub_Type_Project__c</fullName>
        <label>Sub Type Project</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Application engineering - AE</fullName>
                </value>
                <value>
                    <fullName>New Product Development - NPD</fullName>
                </value>
                <value>
                    <fullName>Advanced Development - AD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Project_Value__c</fullName>
        <label>Total Project Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Sales_related_to_EMEA__c</fullName>
        <label>% Total Sales related to EMEA</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X5_years_Revenue__c</fullName>
        <formula>FY16_Q1__c + FY16_Q2__c + FY16_Q3__c + FY16_Q4__c+FY17_Q1__c + FY17_Q2__c + FY17_Q3__c + FY17_Q4__c+ FY18__c+ FY19__c+FY20__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>5 years Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Engineering Project</label>
    <listViews>
        <fullName>AMR_Projects</fullName>
        <columns>NAME</columns>
        <columns>Commercial_launchin__c</columns>
        <columns>Gx_level__c</columns>
        <columns>Gx_Date__c</columns>
        <columns>Product_L_ine__c</columns>
        <columns>Product_Manager__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>AMR</value>
        </filters>
        <label>AMR Projects</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ANZ_Growth_Projects</fullName>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Total_Project_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Company_Name__c</field>
            <operation>equals</operation>
            <value>TE Energy Australia</value>
        </filters>
        <label>ANZ Growth Projects</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ANZ_Projects</fullName>
        <columns>NAME</columns>
        <columns>Project_State__c</columns>
        <columns>Commence_Date__c</columns>
        <columns>Completion_Date__c</columns>
        <columns>Priority__c</columns>
        <columns>Project_Timing__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>BCI_Cordell_Project_ID__c</columns>
        <columns>Company_Name__c</columns>
        <columns>Total_Project_Value__c</columns>
        <columns>Estimated_Value_to_TE__c</columns>
        <columns>Project_status__c</columns>
        <columns>Channel__c</columns>
        <columns>Market_Segment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Engineering_Projects__c.ANZPAC_Project</value>
        </filters>
        <filters>
            <field>Project_status__c</field>
            <operation>notEqual</operation>
            <value>Closed,Project cancelled by PAC,Project Completed</value>
        </filters>
        <label>ANZ Projects</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ANZ_Wind_and_Solar</fullName>
        <columns>BCI_Cordell_Project_ID__c</columns>
        <columns>NAME</columns>
        <columns>Project_Description__c</columns>
        <columns>Project_status__c</columns>
        <columns>Total_Project_Value__c</columns>
        <columns>Estimated_Value_to_TE__c</columns>
        <columns>Market_Segment__c</columns>
        <columns>Project_State__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>AUSTRALIA,NEW ZEALAND,PNG (Papua New Guinea)</value>
        </filters>
        <filters>
            <field>Market_Segment__c</field>
            <operation>equals</operation>
            <value>Solar,Wind</value>
        </filters>
        <label>ANZ - Wind and Solar</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>C_F_EMEA_projects</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Line_Group__c</field>
            <operation>equals</operation>
            <value>Connectors &amp; Fittings</value>
        </filters>
        <label>C&amp;F EMEA projects</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EMEA_ANZ_MVJ_MVT</fullName>
        <columns>NAME</columns>
        <columns>FY13__c</columns>
        <columns>FY14__c</columns>
        <columns>FY15__c</columns>
        <columns>Product_L_ine__c</columns>
        <columns>Product_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_L_ine__c</field>
            <operation>equals</operation>
            <value>MV Joints C/A,MV Joints H/S,MV Terminations C/A,MV Terminations H/S</value>
        </filters>
        <label>EMEA ANZ MVJ, MVT</label>
        <language>en_US</language>
    </listViews>
</CustomObject>